[package]
name = "relaxed"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dimpolo/relaxed/"

[dependencies]
atomic_float = { git = "https://github.com/dimpolo/atomic_float.git", branch = "dev", default_features = false }
serde = { version = "1.0.198", default-features = false, features = ["derive"], optional = true }

[features]
serde = ["dep:serde", "atomic_float/serde"]